Fix type on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -101,12 +101,17 @@ a {
 
 @media only screen and (max-width: 600px) {
   body {
-    font-size: 22px;
+    font-size: 20px;
+    line-height: 1.5;
   }
 
   .info {
     margin: 125px 0 60px 0;
     padding: 0 30px;
+  }
+
+  img {
+    width: 100%;
   }
 }
 
